re PR c++/15025 (accepts redeclaration of template as non-template)

PR c++/15025
	* decl.c (xref_tag): Issue errors about redeclaring template
	classes as non-template classes.

	PR c++/15025
	* g++.dg/template/redecl1.C: New test.

From-SVN: r82171